examples/bench/bad/typing/generalize6.mlw

type 'a t

goal test : forall x:'a t. forall y:'b t. x=y
